--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
@@ -14,18 +14,26 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/"
-          >Home <span class="sr-only">(current)</span></a
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Home
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about" routerLinkActive="active"
+          >About</a
         >
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about">About</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/list-course">List Course</a>
+        <a class="nav-link" routerLink="/list-course" routerLinkActive="active"
+          >List Course</a
+        >
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
