--- a/src/app/pages/home-template/list-course/list-course.component.html
+++ b/src/app/pages/home-template/list-course/list-course.component.html
@@ -1,1 +1,12 @@
-<p>list-course works!</p>
+<div class="container">
+  <div class="row">
+    <ng-container *ngIf="listCourse">
+      <div
+        class="col-lg-3 col-md-6 col-sm-12 mt-3"
+        *ngFor="let course of listCourse"
+      >
+        <app-course [course]="course"></app-course>
+      </div>
+    </ng-container>
+  </div>
+</div>
