upload source code buoi 6

--- a/src/app/pages/home-template/list-course/course/course.component.html
+++ b/src/app/pages/home-template/list-course/course/course.component.html
@@ -3,5 +3,17 @@
 
   <div class="card-body">
     <h4 class="card-title">{{ course.tenKhoaHoc }}</h4>
+    <!-- Truyền 1 param -->
+    <!-- <a class="btn btn-success" routerLink="/detail/{{ course.maKhoaHoc }}"
+      >Detail</a
+    > -->
+
+    <!-- Truyền nhiều param -->
+    <a
+      class="btn btn-success"
+      routerLink="/detail/{{ course.maKhoaHoc }}"
+      [queryParams]="{ tenKhoaHoc: course.tenKhoaHoc, biDanh: course.biDanh }"
+      >Detail</a
+    >
   </div>
 </div>
