--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
@@ -35,6 +35,12 @@
           >List Course</a
         >
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register" routerLinkActive="active"
+          >Register</a
+        >
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input
