upload source code angular buoi 8

--- a/src/app/pages/home-template/list-course/course/course.component.html
+++ b/src/app/pages/home-template/list-course/course/course.component.html
@@ -15,5 +15,14 @@
       [queryParams]="{ tenKhoaHoc: course.tenKhoaHoc, biDanh: course.biDanh }"
       >Detail</a
     >
+
+    <button
+      class="btn btn-danger"
+      data-toggle="modal"
+      data-target="#exampleModal"
+      (click)="xemNhanh()"
+    >
+      Xem nhanh
+    </button>
   </div>
 </div>
