--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
@@ -1,57 +1,48 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">Navbar</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<header id="header">
+  <div class="header-content">
+    <div class="logo">
+      <a routerLink="/">
+        <i class="fas fa-graduation-cap fa-5x"></i>
+        <h2>PraRoz</h2>
+      </a>
+    </div>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          >Home
-        </a>
-      </li>
+    <!-- Menu Toggle -->
+    <div class="menu-toggle" id="menu-toggle">
+      <i class="fas fa-bars fa-5x"></i>
+      <span> Danh Mục Khóa Học</span>
+    </div>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/about" routerLinkActive="active"
-          >About</a
-        >
-      </li>
+    <!-- Search -->
+    <div class="search">
+      <input type="search" placeholder="Search info" />
+    </div>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/list-course" routerLinkActive="active"
-          >List Course</a
-        >
-      </li>
+    <!-- Navbar -->
+    <div class="navbar">
+      <div class="navbar-menu">
+        <ul class="list-menu">
+          <li class="list-menu-item" *ngFor="let item of danhMucKhoaHoc">
+            <a
+              routerLink="/list-course"
+              [queryParams]="{ maDanhMuc: item.maDanhMuc }"
+              (click)="handleClickCategory()"
+              >{{ item.tenDanhMuc }}</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register" routerLinkActive="active"
-          >Register</a
-        >
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </form>
+    <div class="btn-login" *ngIf="!isLogin">
+      <a class="btn btn-style" routerLink="/login">Đăng Nhập</a>
+    </div>
+
+    <div class="btn-login" *ngIf="isLogin">
+      <div class="ml-2 mr-2">Xin Chào, {{ user.hoTen }}</div>
+      <a class="btn btn-style" routerLink="/login" (click)="logout()"
+        >Đăng xuất</a
+      >
+    </div>
   </div>
-</nav>
+</header>
