--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.scss
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.scss
@@ -1,4 +1,159 @@
-.active {
-  background-color: #ddd;
-  color: red !important;
+/* Header */
+#header {
+  height: 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  z-index: 2;
+  transition: all 0.5s;
+}
+
+.header-content {
+  height: 100%;
+  width: 100%;
+  padding: 0 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 100%;
+  left: -100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #000;
+  transition: all 0.3s ease-out;
+  z-index: 1;
+}
+
+.navbar.active {
+  left: 0;
+}
+
+.list-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.list-menu-item a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 24px;
+  display: block;
+}
+
+.list-menu-item a:hover {
+  color: #ff7200;
+}
+
+/* Search */
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 330px;
+}
+
+.search input {
+  width: 100%;
+  height: 40px;
+  padding-left: 12px;
+  background-color: #fff;
+  border-radius: 8px;
+  outline: none;
+}
+
+.btn-login {
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-login div {
+  color: #fff;
+}
+
+.btn-login a {
+  height: 100%;
+  display: block;
+}
+
+.btn-login a:hover {
+  color: #ff7200;
+  background-color: #fff;
+}
+
+/* MENU TOGGLE */
+.menu-toggle {
+  width: 380px;
+  text-align: center;
+  padding: 6px 10px;
+  color: #fff;
+}
+
+.menu-toggle i,
+.menu-toggle span {
+  font-size: 24px;
+}
+
+@media (max-width: 1023px) {
+  .menu-toggle span {
+    display: none;
+  }
+
+  .search input {
+    width: 250px;
+  }
+
+  .list-menu {
+    padding: 0;
+  }
+
+  .btn-login {
+    width: 280px;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 739px) {
+  .header-content {
+    padding: 0 10px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .search {
+    width: 250px;
+  }
+
+  .list-menu-item a {
+    font-size: 16px;
+  }
+
+  .btn-login a {
+    font-size: 14px;
+  }
+
+  .menu-toggle {
+    width: auto;
+  }
 }
