--- a/src/app/pages/home-template/home-template.component.html
+++ b/src/app/pages/home-template/home-template.component.html
@@ -1,2 +1,5 @@
 <app-navbar-home></app-navbar-home>
-<router-outlet></router-outlet>
+<div class="bg-home">
+  <router-outlet></router-outlet>
+</div>
+<app-footer-home></app-footer-home>
