--- a/src/app/pages/home-template/home/home.component.html
+++ b/src/app/pages/home-template/home/home.component.html
@@ -1,16 +1,3 @@
-<!-- {{ content | pipes }} -->
-<p>{{ info | uppercase }}</p>
-<p>{{ info | lowercase }}</p>
-<p>{{ people | json }}</p>
-<p>{{ arr | slice: 2:6 }}</p>
-<p>{{ num | percent }}</p>
-
-<input type="text" [(ngModel)]="inputValue" />
-{{ inputValue }}
-<app-child-home [data]="inputValue"></app-child-home>
-
-<app-button></app-button>
-
-<section class="example-section">
-  <mat-checkbox class="example-margin">Check me!</mat-checkbox>
-</section>
+<app-showcase></app-showcase>
+<app-about-home></app-about-home>
+<app-latest-course></app-latest-course>
