--- a/src/app/pages/home-template/list-course/list-course.component.html
+++ b/src/app/pages/home-template/list-course/list-course.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="list-course container">
   <div class="row">
     <ng-container *ngIf="listCourse">
       <div
