upload source code project  HomeTemplate E-Learning Second

--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.html
@@ -39,7 +39,9 @@
     </div>
 
     <div class="btn-login" *ngIf="isLogin">
-      <div class="ml-2 mr-2">Xin Chào, {{ user.hoTen }}</div>
+      <div class="ml-2 mr-2">
+        Xin Chào, <a class="user" routerLink="/detail-user">{{ user.hoTen }}</a>
+      </div>
       <a class="btn btn-style" routerLink="/login" (click)="logout()"
         >Đăng xuất</a
       >
