--- a/src/app/pages/home-template/_components/navbar-home/navbar-home.component.scss
+++ b/src/app/pages/home-template/_components/navbar-home/navbar-home.component.scss
@@ -60,23 +60,6 @@
   color: #ff7200;
 }
 
-/* Search */
-.search {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 330px;
-}
-
-.search input {
-  width: 100%;
-  height: 40px;
-  padding-left: 12px;
-  background-color: #fff;
-  border-radius: 8px;
-  outline: none;
-}
-
 .btn-login {
   width: 300px;
   display: flex;
@@ -96,6 +79,11 @@
 .btn-login a:hover {
   color: #ff7200;
   background-color: #fff;
+}
+
+.btn-login .user:hover {
+  color: #007bff;
+  background-color: transparent;
 }
 
 /* MENU TOGGLE */
