--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* Search */
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 330px;
+}
+
+.search input {
+  width: 100%;
+  height: 40px;
+  padding-left: 12px;
+  background-color: #fff;
+  border-radius: 8px;
+  outline: none;
+}
