--- a/src/app/pages/home-template/_components/footer-home/footer-home.component.scss
+++ b/src/app/pages/home-template/_components/footer-home/footer-home.component.scss
@@ -10,15 +10,15 @@ footer {
   width: 40%;
   padding: 0 30px;
   text-align: center;
-}
 
-.footer-left .logo {
-  display: flex;
-  justify-content: center;
-}
+  .logo {
+    display: flex;
+    justify-content: center;
+  }
 
-.footer-left .description {
-  color: #fff;
+  .description {
+    color: #fff;
+  }
 }
 
 .social-list {
@@ -30,27 +30,27 @@ footer {
 
 .social-item {
   margin-right: 6px;
-}
 
-.social-item a {
-  text-decoration: none;
-  color: #fff;
-  background-color: #ff7200;
-  padding: 10px 20px;
-  border-radius: 50%;
-  display: block;
-}
+  a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #ff7200;
+    padding: 10px 20px;
+    border-radius: 50%;
+    display: block;
+  }
 
-.social-item a:hover {
-  color: #ff7200;
-  background-color: #fff;
-}
+  a:hover {
+    color: #ff7200;
+    background-color: #fff;
+  }
 
-.social-item i {
-  font-size: 24px;
-  position: relative;
-  top: 1px;
-  left: 0;
+  i {
+    font-size: 24px;
+    position: relative;
+    top: 1px;
+    left: 0;
+  }
 }
 
 /* Footer Right */
@@ -64,10 +64,10 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
 
-.footer-right-content .row {
-  width: 100%;
+  .row {
+    width: 100%;
+  }
 }
 
 .footer-right-list {
@@ -76,17 +76,17 @@ footer {
 
 .footer-right-item {
   margin-top: 12px;
-}
 
-.footer-right-item a {
-  color: #fff;
-  font-weight: 500;
-  text-decoration: none;
-  padding: 6px 24px;
-}
+  a {
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 6px 24px;
+  }
 
-.footer-right-item a:hover {
-  color: #ff7200;
+  a:hover {
+    color: #ff7200;
+  }
 }
 
 @media (max-width: 739px) {
