--- a/src/app/pages/home-template/detail-course/detail-course.component.scss
+++ b/src/app/pages/home-template/detail-course/detail-course.component.scss
@@ -6,13 +6,13 @@
 .detail-img {
   width: 100%;
   height: 550px;
-}
 
-.detail-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top center;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center;
+  }
 }
 
 .detail-content {
@@ -41,12 +41,12 @@
 
 .detail-info-item {
   margin-right: 20px;
-}
 
-.detail-info-item span,
-.detail-info-item i {
-  margin-right: 4px;
-  color: rgb(81, 233, 81);
+  i,
+  span {
+    margin-right: 4px;
+    color: rgb(81, 233, 81);
+  }
 }
 
 .detail-info-img {
@@ -54,13 +54,13 @@
   height: 250px;
   margin-top: 16px;
   text-align: center;
-}
 
-.detail-info-img img {
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  object-position: center;
+  img {
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 .btn-register {
