--- a/src/app/pages/home-template/home/latest-course/latest-course.component.scss
+++ b/src/app/pages/home-template/home/latest-course/latest-course.component.scss
@@ -13,15 +13,15 @@
 .latest-course {
   margin-top: 40px;
   padding: 0 80px 80px;
-}
 
-.latest-course h2 {
-  font-size: 30px;
-  text-transform: uppercase;
-  color: #ff7200;
-  text-align: center;
-  margin-bottom: 20px;
-  padding-left: 6px;
+  h2 {
+    font-size: 30px;
+    text-transform: uppercase;
+    color: #ff7200;
+    text-align: center;
+    margin-bottom: 20px;
+    padding-left: 6px;
+  }
 }
 
 .latest-item {
@@ -37,18 +37,18 @@
   width: 100%;
   height: 250px;
   overflow: hidden;
-}
 
-.latest-item img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
-  transition: all 0.5s;
-}
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.5s;
+  }
 
-.latest-item img:hover {
-  transform: scale(1.2);
+  img:hover {
+    transform: scale(1.2);
+  }
 }
 
 .latest-content {
