--- a/src/app/pages/home-template/home/showcase/showcase.component.scss
+++ b/src/app/pages/home-template/home/showcase/showcase.component.scss
@@ -7,10 +7,10 @@
 .showcase-img {
   width: 100%;
   max-height: 600px;
-}
 
-.showcase-img img {
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
+  img {
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
