update source E-Learning 12th

--- a/src/app/pages/home-template/_components/footer-home/footer-home.component.html
+++ b/src/app/pages/home-template/_components/footer-home/footer-home.component.html
@@ -40,35 +40,15 @@
         <div class="col-lg-3 col-md-6 col-sm-12">
           <ul class="footer-right-list">
             <li class="footer-right-item">
-              <a href="#">Home</a>
+              <a href="/">Home</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">About</a>
+              <a href="/detail-user">Detail User</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">Contact</a>
-            </li>
-
-            <li class="footer-right-item">
-              <a href="#">Design</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-12">
-          <ul class="footer-right-list">
-            <li class="footer-right-item">
-              <a href="#">Home</a>
-            </li>
-
-            <li class="footer-right-item">
-              <a href="#">About</a>
-            </li>
-
-            <li class="footer-right-item">
-              <a href="#">Contact</a>
+              <a href="/detail-course">Detail Course</a>
             </li>
 
             <li class="footer-right-item">
@@ -80,15 +60,15 @@
         <div class="col-lg-3 col-md-6 col-sm-12">
           <ul class="footer-right-list">
             <li class="footer-right-item">
-              <a href="#">Home</a>
+              <a href="/">Home</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">About</a>
+              <a href="/detail-user">Detail User</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">Contact</a>
+              <a href="/detail-course">Detail Course</a>
             </li>
 
             <li class="footer-right-item">
@@ -100,15 +80,35 @@
         <div class="col-lg-3 col-md-6 col-sm-12">
           <ul class="footer-right-list">
             <li class="footer-right-item">
-              <a href="#">Home</a>
+              <a href="/">Home</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">About</a>
+              <a href="/detail-user">Detail User</a>
             </li>
 
             <li class="footer-right-item">
-              <a href="#">Contact</a>
+              <a href="/detail-course">Detail Course</a>
+            </li>
+
+            <li class="footer-right-item">
+              <a href="#">Design</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <ul class="footer-right-list">
+            <li class="footer-right-item">
+              <a href="/">Home</a>
+            </li>
+
+            <li class="footer-right-item">
+              <a href="/detail-user">Detail User</a>
+            </li>
+
+            <li class="footer-right-item">
+              <a href="/detail-course">Detail Course</a>
             </li>
 
             <li class="footer-right-item">
